Fix menu scroll on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -115,11 +115,8 @@ nav button:hover {
 }
 
 .menu-group {
-  display: grid;
-  grid-template-columns: 1fr;
   max-height: 600px;
-  gap: 1em;
-  padding: 1.5em 0;
+  padding: 1.5em;
 }
 
 .menu-item {
@@ -127,9 +124,7 @@ nav button:hover {
   flex-direction: column;
 }
 
-.menu-item-text {
-  flex-grow: 1;
-}
+
 
 .menu-item-heading {
   display: flex;
@@ -142,7 +137,7 @@ nav button:hover {
 }
 
 .menu-item-desc {
-  line-height: 1;
+  line-height: 1.6;
 }
 
 footer {
@@ -179,6 +174,11 @@ footer {
     flex-direction: column;
     justify-content: flex-start;
   }
+
+  .menu-group {
+    max-height: 500px;
+    overflow: scroll;
+  }
 }
 
 @media (max-width:440px) {
@@ -189,6 +189,4 @@ footer {
   .container {
     font-size: 15px;
   }
-
-
 }
